src/objects/position__c.object
<CustomObject>
    <fields>
        <fullName>close_date__c</fullName>
        <label>close date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>department__c</fullName>
        <label>department</label>
        <picklist>
            <picklistValues>
                <fullName>CSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MECHANICAL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>edu_qualification__c</fullName>
        <label>edu-qualification</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>educational_requirements__c</fullName>
        <label>educational requirements</label>
        <picklist>
            <picklistValues>
                <fullName>college</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>highschool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>master</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pg</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>hire_by__c</fullName>
        <label>hire by</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>job_description__c</fullName>
        <label>job description</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legacy_id__c</fullName>
        <externalId>true</externalId>
        <label>legacy-id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>location</label>
        <referenceTo>location__c</referenceTo>
        <relationshipLabel>positions</relationshipLabel>
        <relationshipName>positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>max_sal__c</fullName>
        <label>max-sal</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>min_sal__c</fullName>
        <label>min sal</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>num_of_applications__c</fullName>
        <label>num of applications</label>
        <summaryForeignKey>Job_Application__c.positioni__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>open_date__c</fullName>
        <label>open date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>position_title__c</fullName>
        <label>position title</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>prog_language__c</fullName>
        <label>prog-language</label>
        <picklist>
            <picklistValues>
                <fullName>.NET</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C++</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COBOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORTARN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PERL</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>responsibilities__c</fullName>
        <label>responsibilities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>skills_required__c</fullName>
        <label>skills required</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>startdate__c</fullName>
        <label>startdate</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <picklist>
            <picklistValues>
                <fullName>open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>new</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sub_status__c</fullName>
        <label>sub-status</label>
        <picklist>
            <controllingField>status__c</controllingField>
            <picklistValues>
                <fullName>canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>filled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>regected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>travel_req__c</fullName>
        <defaultValue>true</defaultValue>
        <label>travel req</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>user</label>
        <referenceTo>user__c</referenceTo>
        <relationshipLabel>positions</relationshipLabel>
        <relationshipName>positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>position</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>pos-{00000}</displayFormat>
        <label>position id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>positions</pluralLabel>
    <recordTypes>
        <fullName>nontech</fullName>
        <active>true</active>
        <label>nontech</label>
    </recordTypes>
    <recordTypes>
        <fullName>tech</fullName>
        <active>true</active>
        <label>tech</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>education_validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( educational_requirements__c ,&quot;pg&quot;)</errorConditionFormula>
        <errorDisplayField>educational_requirements__c</errorDisplayField>
        <errorMessage>pg students r not fitt for this position</errorMessage>
    </validationRules>
</CustomObject>